Bug 167261 - Ksnapshot doesn't suggest "name.png" after choosing "save as"
Summary: Ksnapshot doesn't suggest "name.png" after choosing "save as"
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-22 23:39 UTC by Piotr Pełzowski
Modified: 2008-07-26 15:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Pełzowski 2008-07-22 23:39:32 UTC
Version:            (using KDE 4.0.98)
Installed from:    SuSE RPMs

Ksnapshot doesn't suggest "name.png" after choosing "save as", it used to suggest in kde4.0 afaik. Now I have to manually type "name1.png'. Furthermore when I take another snapshot it also won't suggest "name-n+1" , location input will be blank again.
Comment 1 Urs Wolfer 2008-07-25 22:33:10 UTC
Nothing has changed here; seems to be a regression in KFileDialog.
Comment 2 Rafael Fernández López 2008-07-26 12:43:53 UTC
Strange, works here.
Comment 3 Rafael Fernández López 2008-07-26 12:49:42 UTC
OK, pretty amazing. I was testing with a remote folder by default.

1. Save As. Select a remote folder (for instance, a ftp one).
2. Save it.
3. Save As again.
3. Now the name is suggested.

That doesn't happen for local folders. So, yes, I can reproduce with local 
folders. Remote ones do fine.
Comment 4 Rafael Fernández López 2008-07-26 15:00:45 UTC
SVN commit 838026 by ereslibre:

The loop was taking away the filename. Lets better use KIO::stat (with a synchronousRun) to determine if it is a filename or a folder.

BUG: 167261


 M  +8 -18     kfilewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=838026