The loop was taking away the filename. Lets better use KIO::stat (with a synchronousRun) to determine if it is a filename or a folder.

BUG: 167261

svn path=/trunk/KDE/kdelibs/; revision=838026